@startuml
skinparam linetype ortho

namespace "Word_O_Clock" as top {

    class Daemon {
        +main()
    }


    namespace Inputs {
        class ButtonReader {
            +getNewInput()
        }
    }

    namespace Application {
        class ApplicationManager {
            +startApplication(appId)
            +stopApplication()

            +setJsonConfig(appId, jsonConfig)
            +getJsonConfig(appId)
        }

        interface Application {
            +{abstract} setJson(jsonConfig)
            +{abstract} getJson()
            +{abstract} start()
            +{abstract} stop()

            -{abstract} applicationThread()
        }



        class ThreadPool {
            +startWorkerThread()
            +stopWorkerThread()
            +setIdelDuration(idleDuration)
            +addTask(task, args)
        }

        ThreadPool -* Application

        namespace Clock {
            class ApplicationClock {
                -applicationThread()
            }
            class ClockBackend {
                +buildLedMatrixFromCurrentTime()
            }
            class ClockFrontend {
                +showLedMatrix(ledMatrix)
            }

            top.Application.Application <|-- top.Application.Clock.ApplicationClock
            ApplicationClock *-- ClockBackend
            ApplicationClock *-- ClockFrontend
        }

        namespace Snake {
            class ApplicationSnake
            top.Application.Application <|-- top.Application.Snake.ApplicationSnake
        }

        namespace LedServer {
          class LedServer {
            setLedMatrix(ledMatrix)
            setOverrideMask(ledMatrix)
            enableOverrideMask()
            disableOverrideMask()
          }
          class LedBinding
          class LedMatrix {
            +clockToList()
            +borderToList()
              ---
              +ledGrid
              +ledBorder
          }
          LedServer *-- LedBinding
          LedServer --> LedMatrix
        }

        top.Application.Clock.ClockFrontend *-- top.Application.LedServer.LedServer
        top.Application.Snake.ApplicationSnake *-- top.Application.LedServer.LedServer
    }

    top.Application.ApplicationManager *--- top.Application.Clock.ApplicationClock
    top.Application.ApplicationManager *--- top.Application.Snake.ApplicationSnake

    Daemon *-- env.IpcBinding
    Daemon *- top.Inputs.ButtonReader
    Daemon *-- top.Application.ApplicationManager


}

namespace Webserver #DDDDDD {
    class Webserver
}

 namespace env #DDDDDD {
    class IpcBinding {
        +receiveCommand()
        +sendCommand(appId, jsonConfig)
    }
}

Webserver.Webserver *-- env.IpcBinding
Webserver.Webserver -[hidden] top.Daemon
@enduml
